# RAG-evaluation-pipeline

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  rag_notebook.ipynb  rag_pipeline_overview.md  vectorGraphRag.py
src/: clients.py  config.py  evaluation.py  evaluation_llm.py  pipeline.py  rag_adapters.py  utils.py
src/graphify-out/cache/: stat-index.json
src/utils/: __init__.py  benchmark.py  checkpointing.py  cost_tracking.py  documents.py  graph_documents.py  lightrag_support.py  retrying.py  schemas.py  scoring.py
