[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "docling>=2.107.0",
    "google-cloud-spanner>=3.68.0",
    "hipporag>=2.0.0a3",
    "ipykernel>=7.3.0",
    "langchain>=0.3.0",
    "langchain-community<0.4.2",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.3.4",
    "langchain-google-spanner>=0.9.0",
    "langchain-google-vertexai>=2.1.2",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.1",
    "lightrag-hku>=1.4.9.3",
    "matplotlib>=3.11.0",
    "neo4j>=5.20.0",
    "nest-asyncio>=1.6.0",
    "numpy",
    "openai",
    "pandas>=2.0.0",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.10.0",
    "ragas>=0.2.0",
    "seaborn>=0.13.2",
    "tenacity>=8.5.0",
    "transformers>=4.46.0,<5.0.0",
]

[tool.uv]
override-dependencies = [
    "openai>=1.91.1",
    "tiktoken>=0.7.0",
    "transformers>=4.46.0,<5.0.0"
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
]
